# todoist

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: api.py  exceptions.py  logging.py  main.py
src/auth/: controller.py  model.py  service.py
src/database/: core.py
src/entities/: todo.py  user.py
src/todos/: controller.py  model.py  service.py
src/users/: controller.py  model.py  service.py
tests/: conftest.py  test_auth_service.py  test_todos_service.py  test_users_service.py
tests/e2e/: test_auth_endpoints.py  test_todos_endpoints.py  test_users_endpoints.py
