[project]
name = "todoist"
version = "0.1.0"
description = "A fastapi application for managing todos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
]
